--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </table>
   </body>
   <footer>
-    <a href="forms/contact-us.html">Contact Us</a>
+    <a href="Forms/contact-us.html">Contact Us</a>
   </footer>
 </html>
