--- a/index.html
+++ b/index.html
@@ -2,24 +2,35 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Carol Huynh</title>
   </head>
   <body>
-    <h1>HTML Challenge</h1>
+    <h1>Web Dev Information</h1>
     <hr>
     <a href="https://developer.mozilla.org/en-US/">Link to MDN documentation</a><br>
+    <br>
+    <hr>
     <table>
-      <tr>
-        <td>One</td>
-        <td>Two</td>
-      </tr>
-      <tr>
-        <td>Three</td>
-        <td>Four</td>
-      </tr>
+      <thead>
+        <tr>
+          <td><h3>Work Experience</h3></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>HTML</td>
+        </tr>
+        <tr>
+          <td>JavaScript</td>
+        </tr>
+        <tr>
+          <td>CSS</td>
+        </tr>
+      </tbody>
     </table>
   </body>
+  <br>
   <footer>
-    <a href="Forms/contact-us.html">Contact Us</a>
+    <a href="forms/contact-us.html">Contact Us</a>
   </footer>
 </html>
