--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <table>
       <thead>
         <tr>
-          <td><h3>Work Experience</h3></td>
+          <td><h3>Languages</h3></td>
         </tr>
       </thead>
       <tbody>
