--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Carol Huynh</title>
+    <title>Carol</title>
   </head>
   <body>
     <h1>Web Dev Information</h1>
