--- a/index.html
+++ b/index.html
@@ -1,36 +1,55 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
-    <title>Carol</title>
+    <title>Carol's Personal Site</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat&family=Pacifico&family=Parisienne&family=Roboto&display=swap" rel="stylesheet">
   </head>
+
   <body>
-    <h1>Web Dev Information</h1>
-    <hr>
-    <a href="https://developer.mozilla.org/en-US/">Link to MDN documentation</a><br>
-    <br>
-    <hr>
-    <table>
-      <thead>
-        <tr>
-          <td><h3>Languages</h3></td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>HTML</td>
-        </tr>
-        <tr>
-          <td>JavaScript</td>
-        </tr>
-        <tr>
-          <td>CSS</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud">
+      <h1 class="parisienne">I am Bunny</h1>
+      <p class="montserrat">I am a <span class="web">web</span> programmer</p>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
+      <img class="mountain" src="images/mountain.png" alt="mountain">
+    </div>
+
+    <div class="middle-container">
+      <div class="profile">
+        <img class="img1" src="images/bunny.jpg" alt="bunny">
+        <h2>Hello.</h2>
+        <p>I am a web developer and I love to drink tea.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="img2" src="images/computer.png" alt="computer">
+          <h3>Programming</h3>
+          <p>I like to write code, debug code and fix issues.</p>
+        </div>
+        <div class="skill-row">
+          <img class="img3" src="images/chillies.png" alt="chillies">
+          <h3>Hobbies</h3>
+          <p>I love to eat spicy food and love to play badminton.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
+    </div>
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p>© 2018 Name Surname.</p>
+    </div>
   </body>
-  <br>
-  <footer>
-    <a href="forms/contact-us.html">Contact Us</a>
-  </footer>
 </html>
