--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <img class="top-cloud" src="images/cloud.png" alt="cloud">
       <h1 class="parisienne">I am Bunny</h1>
       <p class="montserrat">I am a <span class="web">web</span> programmer</p>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
+      <img class="bottom-cloud" src="Images/cloud.png" alt="cloud">
       <img class="mountain" src="images/mountain.png" alt="mountain">
     </div>
 
     <div class="middle-container">
       <div class="profile">
-        <img class="img1" src="images/bunny.jpg" alt="bunny">
+        <img class="img1" src="Images/bunny.jpg" alt="bunny">
         <h2>Hello.</h2>
         <p>I am a web developer and I love to drink tea.</p>
       </div>
@@ -26,12 +26,12 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="img2" src="images/computer.png" alt="computer">
+          <img class="img2" src="Images/computer.png" alt="computer">
           <h3>Programming</h3>
           <p>I like to write code, debug code and fix issues.</p>
         </div>
         <div class="skill-row">
-          <img class="img3" src="images/chillies.png" alt="chillies">
+          <img class="img3" src="Images/chillies.png" alt="chillies">
           <h3>Hobbies</h3>
           <p>I love to eat spicy food and love to play badminton.</p>
         </div>
