--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Carol's Personal Site</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat&family=Pacifico&family=Parisienne&family=Roboto&display=swap" rel="stylesheet">
   </head>
 
