--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud">
+      <img class="top-cloud" src="Images/cloud.png" alt="cloud">
       <h1 class="parisienne">I am Bunny</h1>
       <p class="montserrat">I am a <span class="web">web</span> programmer</p>
       <img class="bottom-cloud" src="Images/cloud.png" alt="cloud">
-      <img class="mountain" src="images/mountain.png" alt="mountain">
+      <img class="mountain" src="Images/mountain.png" alt="mountain">
     </div>
 
     <div class="middle-container">
