--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="top-container">
       <img class="top-cloud" src="Images/cloud.png" alt="cloud">
       <h1 class="parisienne">I am Bunny</h1>
-      <p class="montserrat">I am a <span class="web">web</span> programmer</p>
+      <h2 class="montserrat"><span class="programmer">a <span class="web">web</span> programmer</span></h2>
       <img class="bottom-cloud" src="Images/cloud.png" alt="cloud">
       <img class="mountain" src="Images/mountain.png" alt="mountain">
     </div>
